use -Xverify:none instead of -noverify for cross-jvm compatibility