@@ -42,7 +42,7 @@ ext {
 
     spockVersion = '0.7-groovy-2.0'
     springLoadedVersion = "1.2.1.RELEASE"
-    springLoadedCommonOptions = "-noverify -Dspringloaded.synchronize=true -Djdk.reflect.allowGetCallerClass=true"
+    springLoadedCommonOptions = "-Xverify:none -Dspringloaded.synchronize=true -Djdk.reflect.allowGetCallerClass=true"
     springVersion = "3.2.11.RELEASE"
     ehcacheVersion = "2.4.6"
     junitVersion = "4.11"
